<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice Clock</string>
    <string name="application_name">Voice Clock</string>
    <string name="accept">Yes</string>
    <string name="change">Change</string>
    <string name="tray_info">Remind you later.</string>
    <string name="on_status">Remind you at %1$s .</string>
    <string name="off_status">Stop timekeeping at %1$s</string>
    <string name="welcome">Welcome, thank you for using!</string>

    <string name="lbl_prefix">%1$s</string>
    <string name="lbl_delete">Delete Item</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_share_app_title">A good App you should have: %s</string>
    <string name="lbl_share_app_content">%s \n\nDownload:\nhttp://tinyurl.com/kr4qvdy</string>
    <string name="lbl_play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="lbl_about">About</string>
    <string name="lbl_comment">Comment</string>
    <string name="lbl_vol">Volume</string>
    <string name="lbl_vol_0">Vibration only</string>
    <string name="lbl_vol_1">Medium</string>
    <string name="lbl_vol_2">Sharp</string>

    <string name="play_service_url">market://details?id=com.google.android.gms</string>

    <string name="play_service_web">https://play.google.com/store/apps/details?id=com.google.android.gms</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;%1$s &lt;/b&gt;&lt;br&gt;Version %2$s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>
    <string name="btn_app_rating">App rating</string>

    <string name="ad_unit_id">ca-app-pub-9133982521997162/8826039731</string>
    <string name="msg_permission_prompt">Without "Write External Storage" the App can\'t work…</string>
    <string name="msg_voice_clock">It is %1$s</string>
    <string name="msg_pause_all">Pause all</string>
    <string name="msg_play_all">Speech works again.</string>
    <string name="msg_app_cant_be_used">Sorry! Some fatal error happened, you can not go on.</string>
    <string name="msg_duplicated_setting">Sorry! You have already set this item.</string>


    <string name="week_day_0">Sunday</string>
    <string name="week_day_1">Monday</string>
    <string name="week_day_2">Tuesday</string>
    <string name="week_day_3">Wednesday</string>
    <string name="week_day_4">Thursday</string>
    <string name="week_day_5">Friday</string>
    <string name="week_day_6">Saturday</string>


    <string-array name="volumes">
        <item>@string/lbl_vol_0</item>
        <item>@string/lbl_vol_1</item>
        <item>@string/lbl_vol_2</item>
    </string-array>
</resources>
